# koo

./: .env.sample  .gitignore  AGENTS.md  README.md  config.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7e3c78d4d937_init.py  9058b93e4641_create_tables.py
app/: cli.py  container.py  enums.py  utils.py
app/ask/: retreiver.py
app/ingest/: pipeline.py  source_ingestor.py
app/models/: base.py  llm.py
app/repositories/: __init__.py  chunk.py  document.py  ingestor.py  llm.py  query_log.py
app/repository/: chunk.py  document.py  llm.py  query_log.py  vector_store.py
app/services/: __init__.py  ask.py  ingest.py
container/: container.py
container/factory/: __init__.py  ingestor_factory.py  llm_factory.py
infra/db/: base.py
infra/db/impl/: __init__.py  chunk.py  document.py  query_log.py
infra/db/orm/: __init__.py  base.py  mixins.py
infra/ingestor/: file.py  notion.py  raw_text.py
infra/llm/impl/: __init__.py  ollama.py  openai.py
infra/milvus/: milvus.yaml
infra/notion/: client.py
infra/slack/: client.py
infra/vector_store/milvus/: base.py
infra/vector_store/milvus/docker/: milvus.yaml
infra/vector_store/milvus/impl/: __init__.py  milvus.py
